@@ -9,6 +9,6 @@ AUX qtjambi_base.pri.diff 315 RMD160 3843aac6fe19d84f7b5f92040e73592fa477b79d SH
 DIST qtjambi-gpl-src-4.3.2_01.tar.gz 3754208 RMD160 5b4dad0cd525596807d0d3c407bae0a3e6653952 SHA1 d08cfadccac0c7ab5b43d569e383fa45b45f1e54 SHA256 c500851ec0692ca2cfa6e45ef5c409f33101b7fe0c3351eeb8b81defc187bf37
 DIST qtjambi-gpl-src-4.3.3_01.tar.gz 3797578 RMD160 b94d3102035d8e6fa51188e4bcf5e4149ab2fbc8 SHA1 47240cbb7bc8998189a7a92aa15035cb1bd7545e SHA256 ada8f18f91b28079c7743fb3687571113a6682485855672340c8d82923348182
 EBUILD qtjambi-4.3.2_p1.ebuild 4276 RMD160 c48a2314fcd71749f602d3c56685d1206f3509d6 SHA1 c6f0f212f2d79582e02546cbda7a2a4c1abf6c09 SHA256 4e6b7aed4f088f0a60bbed4c004c6aed0af5d6ef1efd210b93f56d1f0934d88b
-EBUILD qtjambi-4.3.3_p1.ebuild 4579 RMD160 3733892bbeb31d37cf8f15e14baa29044d980188 SHA1 47af073ceef622bca521915344b737f7e19c35ef SHA256 ffcff2d59c9ea99c9200b75c156a491a44430c07d409013a6c01951217d0b102
-MISC ChangeLog 2082 RMD160 7137c6406216c86b6bc7629f80a8b821bec2f54d SHA1 70c4d1fbd24efa821a34415ce12d6d43dded36e4 SHA256 ccb80175074f13b80b5f933984fbd3645caa7a8a199422b1fa317dbcb4880025
+EBUILD qtjambi-4.3.3_p1.ebuild 4595 RMD160 1db94dbc062c8c548ba00dcc48d19d5f9bdd594d SHA1 975db848816486ee28cd3753fbb631baf181e6f8 SHA256 45428b77b0c1386753c5257344caee931c0052056afb3588b93013af252e71e9
+MISC ChangeLog 2171 RMD160 0ef543e713064a3a3b47d0f83dfc69fedd8471ac SHA1 93bc7532af7840f7c95273b9beeda8342e0ad9ca SHA256 35a421d2672d7e106b6b4c701767fd9b448ece3f61dac2f9707dc7dfc9406b3e
 MISC metadata.xml 156 RMD160 d76590850d56864c8d99e6877ed15841b55ef1fc SHA1 e872bab086832a9db3f0fa9b1897c70577d3af21 SHA256 94c4f580c1a55f8a5e1a1dcdd6dedfea0b8bd78c1d7137c354938d73c49e4448
